@@ -6,9 +6,11 @@ local UpdateBuffLayout = GW.UpdateBuffLayout
 local Debug = GW.Debug
 local COLOR_FRIENDLY = GW.COLOR_FRIENDLY
 local DEBUFF_COLOR = GW.DEBUFF_COLOR
+local GetSetting = GW.GetSetting
+local RegisterMovableFrame = GW.RegisterMovableFrame
 
 local function UpdatePlayerBuffFrame()
-    if InCombatLockdown() or not GwPlayerAuraFrame then
+    if InCombatLockdown() or not GwPlayerAuraFrame or GwPlayerAuraFrame.isMoved then
         return
     end
     GwPlayerAuraFrame:ClearAllPoints()
@@ -19,36 +21,6 @@ local function UpdatePlayerBuffFrame()
     end
 end
 GW.UpdatePlayerBuffFrame = UpdatePlayerBuffFrame
-
-local function LoadDebuff(self, data, buffindex, filter)        
-    if data['dispelType'] ~= nil then
-        self.background:SetVertexColor(DEBUFF_COLOR[data['dispelType']].r, DEBUFF_COLOR[data['dispelType']].g, DEBUFF_COLOR[data['dispelType']].b)
-    else          
-        self.background:SetVertexColor(COLOR_FRIENDLY[2].r, COLOR_FRIENDLY[2].g, COLOR_FRIENDLY[2].b);
-    end
-    self.cooldown:SetDrawEdge(0)
-    self.cooldown:SetDrawSwipe(1)
-    self.cooldown:SetReverse(false)
-    self.cooldown:SetHideCountdownNumbers(true)       
-    self.icon:SetTexture(data['icon'])
-     
-    local buffDur = ""
-    local stacks  = ""
-    if data['count'] ~= nil and data['count'] > 1 then
-        stacks = data['count'] 
-    end
-            
-    self.expires =data['expires']
-    self.duration =data['duration']
-    self.cooldown:SetCooldown(0, 0)
-        
-    _G[self:GetName() .. 'CooldownBuffDuration']:SetText(buffDur)
-    _G[self:GetName() .. 'IconBuffStacks']:SetText(stacks)
-           
-    self:SetScript('OnEnter', function() GameTooltip:SetOwner(self, "ANCHOR_BOTTOMLEFT"); GameTooltip:ClearLines(); GameTooltip:SetUnitDebuff(self.unit,buffindex,filter); GameTooltip:Show() end)
-    self:SetScript('OnLeave', function() GameTooltip:Hide() end)  
-end
-GW.LoadDebuff = LoadDebuff
 
 local function LoadBuffs()
     BuffFrame:Hide()
@@ -76,6 +48,30 @@ local function LoadBuffs()
     local fgw = CreateFrame("Frame", nil, nil, "SecureHandlerStateTemplate")
     fgw:SetFrameRef("GwPlayerAuraFrame", player_buff_frame)
     fgw:SetFrameRef("UIParent", UIParent)
+
+    --Movable stuff
+    GwPlayerAuraFrame.secureHandler = fgw
+    GwPlayerAuraFrame.anchor = GetSetting("PlayerBuffFrame_GrowDirection") == "UP" and "BOTTOMRIGHT" or GetSetting("PlayerBuffFrame_GrowDirection") == "DOWN" and "TOPRIGHT"
+    GwPlayerAuraFrame.yOff = GetSetting("PlayerBuffFrame_GrowDirection") == "UP" and 0 or GetSetting("PlayerBuffFrame_GrowDirection") == "DOWN" and 15
+    RegisterMovableFrame("GwPlayerAuraFrame", GwPlayerAuraFrame, "PlayerBuffFrame", "VerticalActionBarDummy", true, true)
+    hooksecurefunc(GwPlayerAuraFrameMoveAble, "StopMovingOrSizing", function (frame)
+        local anchor = GwPlayerAuraFrame.anchor
+        local yOff = GwPlayerAuraFrame.yOff
+
+        if not InCombatLockdown() then
+            GwPlayerAuraFrame:ClearAllPoints()
+            GwPlayerAuraFrame:SetPoint(anchor, frame, anchor, 0, yOff)
+        end
+    end)
+    GwPlayerAuraFrame:ClearAllPoints()
+    GwPlayerAuraFrame:SetPoint(
+        GwPlayerAuraFrame.anchor,
+        GwPlayerAuraFrameMoveAble,
+        GwPlayerAuraFrame.anchor,
+        0,
+        GwPlayerAuraFrame.yOff
+    )
+
     if MultiBarBottomRight then
         fgw:SetFrameRef("MultiBarBottomRight", MultiBarBottomRight)
         fgw:SetAttribute(
@@ -83,8 +79,13 @@ local function LoadBuffs()
             [=[
             local mbar = self:GetFrameRef("MultiBarBottomRight")
             local aura = self:GetFrameRef("GwPlayerAuraFrame")
+            local auraIsMoved = self:GetAttribute("isMoved")
             local uip = self:GetFrameRef("UIParent")
             local protected = mbar:IsProtected()
+
+            if auraIsMoved then
+                newstate = "doNotTouch"
+            end
 
             if newstate == "incombat" and protected then
                 if not mbar or not mbar:IsShown() then
