@@ -276,7 +276,7 @@
     <Frame name="GwPlayerAuraFrame" inherits="SecureHandlerStateTemplate" protected="true" frameStrata="MEDIUM" parent="UIParent" virtual="true">
         <Size x="316" y="18"></Size>
         <Anchors>
-            <Anchor point="BOTTOMLEFT" relativePoint="BOTTOM" x="53" y="110"></Anchor>
+            <Anchor point="BOTTOMLEFT" relativePoint="BOTTOM" x="53" y="120"></Anchor>
         </Anchors>
     </Frame>
 
